--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -12,7 +12,7 @@
  },
 
   "search-result-layout.desktop": {
-    "blocks": [
+    "children": [
       "breadcrumb.search", 
       "search-title.v2", 
       "total-products.v2", 
