--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -76,7 +76,7 @@
   "tab-list.item#home2": {
     "props": {
       "tabId": "electronics",
-      "label": "Electronics"
+      "label": "Instagram"
     }
   },
 
@@ -90,7 +90,7 @@
   },
   "tab-content.item#home2": {
     "children": [
-      "rich-text#home2"
+      "iframe"
     ],
     "props": {
       "tabId": "electronics"
@@ -103,11 +103,11 @@
       "textPosition": "CENTER"
     }
   },
-  "rich-text#home2": {
+  "iframe": {
     "props": {
-      "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-      "textPosition": "CENTER",
-      "font": "t-heading-3"
+      "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
+      "width": 800,
+      "height": 1000
     }
   }
  }
