Alterações no menu superior

--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -15,7 +15,8 @@
   "header-layout.desktop": {
     "children": [
       "header-row#notification",
-      "header-row#main"
+      "header-row#main",
+      "header-row#menu"
     ]
   },
 
@@ -52,12 +53,12 @@
 
   "header-row#main-mobile": {
     "children": [
+      "drawer",
       "logo",
       "header-spacer",
       "minicart",
       "login"
     ],
-  
     "props": {
       "sticky": true,
       "inverted":true
@@ -91,5 +92,13 @@
       "text": "**Free Shipping on orders over $50**",
       "textPosition": "CENTER"
     }
+  },
+
+  "header-row#menu": {
+    "children": [
+      "header-spacer",
+      "vtex.menu@2.x:menu#categories",
+      "header-spacer"
+    ]
   }
 }
