--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -13,6 +13,14 @@
   "vtex.menu@2.x:submenu#major":{
     "children":[
       "vtex.menu@2.x:menu#major"
+    ]
+  },
+
+  "vtex.menu@2.x:menu#major": {
+    "children":[
+      "menu-item#refrigerators",
+      "menu-item#ovens",
+      "menu-item#washers"
     ],
     "props": {
       "orientation": "vertical"
@@ -23,6 +31,34 @@
     "children":[
       "vtex.menu@2.x:menu#small"
     ]
+  },
+
+  "vtex.menu@2.x:menu#small": {
+    "children":[
+      "menu-item#mixers",
+      "menu-item#toasters",
+      "menu-item#coffee"
+    ],
+    "props": {
+      "orientation": "vertical"
+    }
+  },
+
+  "vtex.menu@2.x:submenu#electronics":{
+    "children":[
+      "vtex.menu@2.x:menu#small"
+    ]
+  },
+
+  "vtex.menu@2.x:menu#electronics": {
+    "children":[
+      "menu-item#cameras",
+      "menu-item#laptops",
+      "menu-item#tvs"
+    ],
+    "props": {
+      "orientation": "vertical"
+    }
   }
 
 }
