--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -46,7 +46,7 @@
 
   "vtex.menu@2.x:submenu#electronics":{
     "children":[
-      "vtex.menu@2.x:menu#small"
+      "vtex.menu@2.x:menu#eletronics"
     ]
   },
 
