--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -50,7 +50,7 @@
     ]
   },
 
-  "vtex.menu@2.x:menu#electronics": {
+  "vtex.menu@2.x:menu#eletronics": {
     "children":[
       "menu-item#cameras",
       "menu-item#laptops",
