--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -46,11 +46,11 @@
 
   "vtex.menu@2.x:submenu#electronics":{
     "children":[
-      "vtex.menu@2.x:menu#eletronics"
+      "vtex.menu@2.x:menu#electronics"
     ]
   },
 
-  "vtex.menu@2.x:menu#eletronics": {
+  "vtex.menu@2.x:menu#electronics": {
     "children":[
       "menu-item#cameras",
       "menu-item#laptops",
