Correções Menu Flex

--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -2,7 +2,7 @@
   
   "vtex.menu@2.x:submenu#major":{
     "children":[
-      "vtex.menu@2.x:menu#major"
+      "flex-layout.row#major"
     ]
   },
 
@@ -10,8 +10,7 @@
     "children":[
       "menu-item#refrigerators",
       "menu-item#ovens",
-      "menu-item#washers",
-      "flex-layout.row#major"
+      "menu-item#washers"
     ],
     "props": {
       "orientation": "vertical"
